Bug 153220 - CRASH: Clicking on Border and background after undoing header insertion
Summary: CRASH: Clicking on Border and background after undoing header insertion
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.4.6 target:7.5.1
Keywords:
Depends on:
Blocks: Writer-Header-Footer
  Show dependency treegraph
 
Reported: 2023-01-26 13:08 UTC by Xisco Faulí
Modified: 2023-01-28 00:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["SfxItemSet::SfxItemSet(SfxItemSet const &)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-01-26 13:08:17 UTC
Steps to reproduce:
1. Open writer
2. Insert header
3. Undo
4. Expand the blue button -> The menu displayed is not updated
5. Click on Border and background

-> Crash

Maybe the right way to fix this issue is to correctly update the expand menu on step 5 ?

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 81ced283de2d0da377225afeb589b793716238bd
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded

and

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: ff2ba77f22b2e96f96f5537aec1705956b47583d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-01-26 13:08:39 UTC
@Caolán, I thought you might be interested in this issue
Comment 2 Telesto 2023-01-26 13:28:30 UTC
Confirm
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 37e3455a13ab5741104bf41d05a80e60a4612682
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2023-01-26 16:22:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/481c740ff04bc119fe1822f1a773a10a46d5d3a2

tdf#153220 exit header/footer edit mode, if active, on undo header/footer

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2023-01-26 16:27:49 UTC
should be good enough to dismiss the edit mode on undo, which is what happens when using the insert, header, untick checkbox route. Done in trunk, backports to 7-5 and 7-4 in gerrit
Comment 5 Commit Notification 2023-01-27 08:39:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/b39c4353fecc168c6752aacd74e2b483c0000e05

tdf#153220 exit header/footer edit mode, if active, on undo header/footer

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-01-27 08:40:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f7b9bb615b65a036458d2bd28cd13492407c0173

tdf#153220 exit header/footer edit mode, if active, on undo header/footer

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2023-01-27 10:15:29 UTC
Might have appeared with the fix for bug 46561.

Verified fixed with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 69c6f7bccec838b7288a25a29a83b7f782ba7586
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you both!
Comment 8 Xisco Faulí 2023-01-27 14:07:55 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard